fix(components): [el-select-v2] fix style problem when select-v2 option too long

--- a/packages/theme-chalk/src/select-v2.scss
+++ b/packages/theme-chalk/src/select-v2.scss
@@ -306,6 +306,7 @@ $--input-inline-start: 15px !default;
     transform: translateY(-50%);
     margin-inline-start: $--input-inline-start;
     width: calc(100% - 52px);
+    @include utils-ellipsis;
     color: var(--el-input-font-color, map.get($--input, 'font-color'));
     font-size: inherit;
     @include when(transparent) {
